# Open-Data-Chunker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: usage.md
src/: cli.py  exporter.py  models.py  parser.py
tests/: test_export_aggregated.py  test_parser.py
